--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
 <html>
-  <Header>
+  <head>
+    <title>My First Website</title>
+  </head>
+  <body>
     It Works!
-  </Header>
+  </body>
 </html>
