--- a/AI/SAT3812_AI_coding.html
+++ b/AI/SAT3812_AI_coding.html
@@ -16,7 +16,7 @@
     .top{display:flex;gap:8px;align-items:center;justify-content:space-between;padding:10px 14px;font-weight:700}
     .pill{pointer-events:auto;background:rgba(15,25,55,.5);backdrop-filter:blur(4px);border:1px solid rgba(255,255,255,.1);border-radius:999px;padding:6px 12px}
     .btn{cursor:pointer}
-    .center{align-self:center;justify-self:center;text-align:center}
+    .center{align-self:center;justify-self:center;text-align:center;display:none}
     .title{margin:0 0 8px;font-size:clamp(20px,4vw,36px);font-weight:900}
     .subtitle{opacity:.9}
     .keys kbd{background:#0d1735;border:1px solid #22325c;border-bottom-color:#13214a;border-radius:8px;padding:5px 8px;font-family:ui-monospace,Menlo,Consolas,monospace;font-size:12px}
@@ -35,12 +35,7 @@
           <div class="pill" id="timer">Time: 60</div>
           <div class="pill btn" id="startBtn">▶ Start</div>
         </div>
-        <div class="center" id="center">
-          <h1 class="title">Basket Catch</h1>
-          <div class="subtitle">Use <span class="keys"><kbd>←</kbd><kbd>→</kbd><kbd>↑</kbd><kbd>↓</kbd></span> to move the basket and catch falling gold!</div>
-          <p class="subtitle">Gold sizes are random; bigger gold is heavier. Stay within the sky bounds.</p>
-          <p class="subtitle">Press <kbd>Space</kbd> or click <span class="pill">Start</span> to play. <span class="blink">Good luck!</span></p>
-        </div>
+        <div class="center" id="center"></div>
         <div class="foot">Tip: Tweak difficulty by editing <b>spawnRate</b> and <b>gravity</b> in the script.</div>
       </div>
     </div>
@@ -83,22 +78,20 @@
     score = 0; tLeft = gameLength; running = false; last = 0; spawnAcc = 0;
     golds.length = 0; sparks.length = 0; basket.x = W/2; basket.y = H-90; basket.vx=0; basket.vy=0;
     scoreEl.textContent = `Score: ${score}`; timerEl.textContent = `Time: ${Math.ceil(tLeft)}`;
-    center.style.display = 'block';
   }
 
   function spawnGold(){
     if (golds.length >= maxGold) return;
-    const r = 10 + Math.random()*26;           // size 10..36
+    const r = 10 + Math.random()*26;
     const x = 40 + Math.random() * (W - 80);
     const y = -r - 10;
-    const vy = 60 + r * 2 + Math.random()*40;  // heavier falls faster
-    const value = Math.round(r);                // bigger = more points
-    const spin = (Math.random()*2-1) * 2;      // small rotation speed
+    const vy = 60 + r * 2 + Math.random()*40;
+    const value = Math.round(r);
+    const spin = (Math.random()*2-1) * 2;
     golds.push({x,y,r,vy,value,spin,a:0});
   }
 
   function update(dt){
-    // Controls
     basket.vx = 0; basket.vy = 0;
     if (keys.has('arrowleft')) basket.vx = -basket.speed;
     if (keys.has('arrowright')) basket.vx = basket.speed;
@@ -106,21 +99,17 @@
     if (keys.has('arrowdown')) basket.vy = basket.speed;
 
     basket.x += basket.vx * dt; basket.y += basket.vy * dt;
-    // Constrain to sky bounds
     basket.x = Math.max(14, Math.min(W - basket.w - 14, basket.x));
     basket.y = Math.max(60, Math.min(H - basket.h - 14, basket.y));
 
-    // Spawn logic
     spawnAcc += dt * spawnRate;
     while (spawnAcc >= 1){ spawnGold(); spawnAcc -= 1; }
 
-    // Update gold
     for (let i=golds.length-1;i>=0;i--){
       const g = golds[i];
-      g.vy += gravity * dt * 0.2; // integrate gravity
+      g.vy += gravity * dt * 0.2;
       g.y += g.vy * dt; g.a += g.spin * dt;
 
-      // Catch test (AABB-circle simple overlap)
       const nearestX = Math.max(basket.x, Math.min(g.x, basket.x + basket.w));
       const nearestY = Math.max(basket.y, Math.min(g.y, basket.y + basket.h));
       const dx = g.x - nearestX, dy = g.y - nearestY;
@@ -132,14 +121,12 @@
         continue;
       }
 
-      // Missed (fell off screen)
       if (g.y - g.r > H + 10){
         try{ sndMiss.currentTime = 0; sndMiss.play(); }catch{}
         golds.splice(i,1);
       }
     }
 
-    // Update sparks
     for (let i=sparks.length-1;i>=0;i--){
       const p = sparks[i];
       p.vx *= 0.99; p.vy += 900*dt; p.x += p.vx*dt; p.y += p.vy*dt; p.life -= dt; p.a += p.va*dt;
@@ -148,13 +135,10 @@
   }
 
   function draw(){
-    // Sky
     ctx.clearRect(0,0,W,H);
-    // Stars
     ctx.fillStyle = 'rgba(255,255,255,.08)';
     for(let i=0;i<40;i++){ const x=(i*137)%W; const y=(i*97)%H*0.5+10; ctx.fillRect((x+(i*7%30))%W, y, 2, 2); }
 
-    // Basket
     ctx.save();
     ctx.shadowColor = '#000'; ctx.shadowBlur = 12;
     const grd = ctx.createLinearGradient(basket.x, basket.y, basket.x, basket.y+basket.h);
@@ -162,11 +146,9 @@
     ctx.fillStyle = grd;
     roundRect(basket.x, basket.y, basket.w, basket.h, 10);
     ctx.fill();
-    // rim
     ctx.strokeStyle = 'rgba(255,255,255,.2)'; ctx.lineWidth = 2; ctx.stroke();
     ctx.restore();
 
-    // Gold
     for (const g of golds){
       ctx.save();
       ctx.translate(g.x, g.y); ctx.rotate(g.a||0);
@@ -176,7 +158,6 @@
       ctx.restore();
     }
 
-    // Sparks
     for (const p of sparks){
       ctx.save(); ctx.globalAlpha = Math.max(0,p.life/0.6);
       ctx.translate(p.x,p.y); ctx.rotate(p.a||0);
@@ -210,17 +191,15 @@
     requestAnimationFrame(loop);
   }
 
-  // Input
   addEventListener('keydown', e=>{ const k=e.key.toLowerCase(); if(['arrowleft','arrowright','arrowup','arrowdown',' '].includes(e.key)){ e.preventDefault(); }
     keys.add(k); if (e.key===' ') startGame(); });
   addEventListener('keyup', e=> keys.delete(e.key.toLowerCase()));
   startBtn.addEventListener('click', startGame);
 
   function startGame(){
-    if (!running){ center.style.display='none'; reset(); running=true; }
+    if (!running){ reset(); running=true; center.style.display='none'; }
   }
 
-  // Initialize
   reset();
   requestAnimationFrame(loop);
   </script>
