--- a/AI/SAT3812_AI_coding.html
+++ b/AI/SAT3812_AI_coding.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Basket Catch</title>
+  <title>Gold Catch Game</title>
   <style>
     :root{
       --bg1:#0a0f1f; --bg2:#141d3a; --hud:#e9f1ff; --accent:#ffd54a; --accent2:#ff9f1a;
