--- a/AI/SAT3812_AI_coding.html
+++ b/AI/SAT3812_AI_coding.html
@@ -16,7 +16,7 @@
     .top{display:flex;gap:8px;align-items:center;justify-content:space-between;padding:10px 14px;font-weight:700}
     .pill{pointer-events:auto;background:rgba(15,25,55,.5);backdrop-filter:blur(4px);border:1px solid rgba(255,255,255,.1);border-radius:999px;padding:6px 12px}
     .btn{cursor:pointer}
-    .center{align-self:center;justify-self:center;text-align:center;display:none}
+    .center{align-self:center;justify-self:center;text-align:center}
     .title{margin:0 0 8px;font-size:clamp(20px,4vw,36px);font-weight:900}
     .subtitle{opacity:.9}
     .keys kbd{background:#0d1735;border:1px solid #22325c;border-bottom-color:#13214a;border-radius:8px;padding:5px 8px;font-family:ui-monospace,Menlo,Consolas,monospace;font-size:12px}
@@ -200,7 +200,12 @@
     if (!running){ reset(); running=true; center.style.display='none'; }
   }
 
-  reset();
+  reset(center.innerHTML = `
+  <h1 class="title">Basket Catch</h1>
+  <div class="subtitle">Use <kbd>←</kbd><kbd>→</kbd><kbd>↑</kbd><kbd>↓</kbd> to move the basket and catch falling gold!</div>
+  <p class="subtitle">Press <kbd>Space</kbd> or click Start to play.</p>
+`;
+center.style.display = 'block';);
   requestAnimationFrame(loop);
   </script>
 </body>
